# oopar

./: .cdtconfigure.Build (GNU)  .cproject  CMakeLists.txt  Data Access.dfUseCase  Data Access.dfUseCase.wmf  Doxyfile  Makefile.am  Makefile.in  Multithreaded TaskManager.dfActivity  OOP.mk.in  OOP_user.mk.in  OOPar.dfPackage.wmf  OOPar.prj  OOPar.tpr  Parallel.dfClass.wmf  ProjectHome.md  TTaskTest.c  TTaskTest.h  acinclude.m4  aclocal.m4  configure.in  doxy  oopar.kdevelop  oopar.prj  oopar.pws  ooparmain.c  oopdatamanager.h  oopdataversion.h  ooperror.c  oopfilecomm.h  oopfilestorage.c  oopmetadata.h  oopobjectid.h  ooppardefs.h  oopsaveable.h  ooptask.c  output  tmultidata.h  tmultitask.c  tmultitask.h  (+2 more)
Projects/: CMakeLists.txt  Makefile.am  Makefile.in  ParCompResidual.CreateFluxesTasks(1).dfSequence.wmf  ParCompResidual.h  Projects.dfPackage.wmf  TParAnalysis.h  TParRhs.c  TParRhs.h  TPartitionRelation.c
Projects/BiCGSTAB/: .tm_project.cache  BiCGSTAB.prj  BiCGSTAB.pws  CMakeLists.txt  TBiCGStab.cpp  TBiCGStab.h  TDistNorm.cpp  TDotProduct.h  TIfConditional.h  TLoopFor.cpp  TLoopFor.h  TUpdateResidue.h  descricao  tcomputebeta.h  tsecondif.cpp  tsetvectovec.cpp  tsetvectovec.h  tvecaddextended.cpp
Projects/BiCGSt/: BiCGInt.cpp  BiCGInt.h  BiCGSt.kdevprj  BiCGSt.kdevses  CMakeLists.txt  TBiCGStab.cpp  TContribution.cpp  TContribution.h  TDistNorm.cpp  TLoopFor.cpp  TLoopFor.h  TMultAdd.h  TParVector.cpp  TParVector.h  TPartitionRelation.h  TTaskComm.cpp  TTaskComm.h  TUpdateResidue.cpp  TUpdateResidue.h  bicgdefs.h  bicgdouble.cpp  bicgdouble.h  tbicg_one.cpp  tbicg_one.h  tbicgfor_one.cpp  tbicgfor_one.h
Projects/Flux/: CMakeLists.txt  Flux.prj  Flux.pws  LocalCompResidual.h  Makefile.am  Makefile.in  ParCompResidual.c  Projects.dfPackage  Projects.dfPackage.wmf  TContribution.c  TContribution.cpp  TContribution.h  TLocalCompute.cpp  TLocalCompute.h  TParAnalysis.cpp  TParAnalysis.h  TParCompute.cpp  TParCompute.h  TParMesh.cpp  TParMesh.h  TParRhs.h  TParState.h  TParVector.cpp  TParVector.h  TPartitionRelation.cpp  TPartitionRelation.h  TTaskComm.cpp  TTaskComm.h  fluxdefs.h  multimain.cpp  ooparmain.cpp  pzvecflux.cpp
Projects/PhilFlux/: CMakeLists.txt  Makefile.am  TParVector.cpp  TParVector.h  main.cpp  oopwaittask.cpp  oopwaittask.h  tsmalltask.cpp  tsmalltask.h
Projects/SubStruct/: Makefile.am  Makefile.in  OOPComputeMatricesTask.cpp  OOPContribWeightTask.cpp  OOPContribWeightTask.h  OOPContributeDiagonalTask.cpp  OOPContributeDiagonalTask.h  OOPDohrMatrix.cpp  OOPDumbCommMan.h  OOPLinAlgTasks.cpp  OOPLinAlgTasks.h  TPZFParMatrix.cpp  TPZFParMatrix.h  parsubstruct.cpp  substruct.cpp  tpzdohrprecond.cpp  tpzdohrsubstruct.cpp
Projects/TestCesar/: Makefile.am  cesartest.cpp  tmedonhotask.cpp
Projects/TestSocket/spd/: CMakeLists.txt
Projects/TestSocket/srun/: CMakeLists.txt
Projects/TestSocket/testecc/: CMakeLists.txt
Projects/TestTask/: CMakeLists.txt  Makefile.am  OOPMatVecMultiply.cpp  OOPMatVecMultiply.h  OOPMergeMatrix.cpp  OOPParMatIndexation.cpp  OOPParMatIndexation.h  OOPParMatrix.cpp  OOPParMatrix.h  TTaskTest.cpp  TTaskTest.h  log4cxxclient0.cfg  main.cpp
Projects/Trivial/: CMakeLists.txt  TTaskTest.cpp  ooparmain.cpp  tmultidata.h  tmultitask.cpp  tmultitask.h
Sources/: CMakeLists.txt  Makefile.am  Makefile.in  OOPDataLogger.cpp  OOPDataLogger.h  OOPDouble.cpp  OOPDouble.h  OOPInt.cpp  OOPVector.cpp  cmdefs.h  oopaccessinfo.cpp  oopaccessinfo.h  oopaccesstag.cpp  oopaccesstag.h  oopaccesstaglist.cpp  oopaccesstaglist.h  oopaccesstagmultiset.cpp  oopaccesstagmultiset.h  oopcollector.cpp  oopcollector.h  oopcomm_mpi.cpp  oopcommmanager.cpp  oopcommmanager.h  oopdatamanager.cpp  oopdatamanager.h  oopdataversion.cpp  oopdataversion.h  oopdelobjecttask.cpp  oopdelobjecttask.h  oopdmlock.cpp  oopdmlock.h  ooperror.cpp  ooperror.h  oopevtid.cpp  oopevtid.h  oopevtmanager.cpp  oopevtmanager.h  oopfilecomm.cpp  oopfilecomm.h  oopfilestorage.cpp  (+45 more)
Sources/socket/: socket.h  spd.c  testeS.cpp
branches/Kdevelop-Remake/Sources/: Makefile.am  OOPDataLogger.cpp  OOPDataLogger.h  OOPDouble.cpp  OOPDouble.h  OOPInt.h  OOPVector.cpp  oopaccessinfo.cpp  oopaccessinfo.h  oopaccesstag.cpp  oopaccesstag.h  oopaccesstaglist.cpp  oopaccesstaglist.h  oopaccesstagmultiset.cpp  oopaccesstagmultiset.h  oopcommmanager.cpp  oopcommmanager.h  oopdatamanager.cpp  oopdatamanager.h  oopevtid.h  (+36 more)
lib/: CMakeLists.txt  Makefile.am  Makefile.in
socket/: CMakeLists.txt  Makefile.am  spd.c  srun.c  testeS-original.cpp
trunk/: .cdtconfigure.MPIBuild  .cproject  .project  CMakeLists.txt  DataMan_to_Data.dfClass.wmf  Doxyfile  Makefile.am  OOP.mk.in  OOP_user.mk.in  OOPar.tws  Parallel Flux Computations.dfSequence  acinclude.m4  aclocal.m4  configure  configure.in  doxy  oopar.kdevelop  oopar.prj  oopar.pws  oopdatamanager.c  oopfilecomm.c  oopsaveable.c  ooptaskmanager.c
trunk/Docs/: pzmainpage.h
trunk/Lixo/: NEWS  OOP_user.mk.in  mkinstalldirs
trunk/ParUtil/: TParVector.h  TTaskTest.h  doxparutil.h  socket.h
trunk/Projects/: CMakeLists.txt  LocalCompResidual.c  LocalCompResidual.h  Makefile.am  Makefile.in  Projects.dfPackage  TContribution.h  TParAnalysis.c  TParCompute.h  TParMesh.h
trunk/Sources/: Makefile.am  Makefile.in  OOPDataLogger.cpp  OOPDataLogger.h  OOPDouble.cpp  OOPInt.cpp  OOPInt.h  OOPVector.cpp  OOPVector.h  cmdefs.h  doxsources.h  fluxdefs.h  oopaccessinfo.cpp  oopaccessinfo.h  oopaccesstag.cpp  oopaccesstag.h  oopaccesstaglist.cpp  oopaccesstaglist.h  oopaccesstagmultiset.cpp  oopaccesstagmultiset.h  oopcollector.cpp  oopcollector.h  oopcomm_mpi.h  oopcommmanager.cpp  oopcommmanager.h  oopdatamanager.cpp  oopdatamanager.h  oopdataversion.cpp  oopdataversion.h  oopdelobjecttask.cpp  oopdelobjecttask.h  oopdmlock.cpp  oopdmlock.h  ooperror.cpp  ooperror.h  oopevtid.cpp  oopevtid.h  oopevtmanager.cpp  oopevtmanager.h  oopfilecomm.cpp  (+46 more)
trunk/UML/: DataVersioning.dfUseCase.wmf  OOPar.tpr  OOPar.tws  Parallel Flux Computations.dfSequence.wmf
trunk/lib/: CMakeLists.txt  Makefile.am
trunk/socket/: Makefile.am  doxsocket.h  socket.h  srun.c  teste.c
(+278 files in other folders)
