dnl
dnl configure.in for OOPar
dnl
dnl Process this file with GNU autoconf(1) to produce a configure script.
dnl
dnl $Id: configure.in,v 1.20 2006-10-02 23:52:36 longhin Exp $
dnl

dnl ----------------------------------------------------------------------------
dnl                              INITIAL CHECKINGS
dnl ----------------------------------------------------------------------------
dnl -DOOP_SOCKET -DBLOCKING -DMTSEND

dnl Checking if we are in the OOPar source tree
AC_INIT(OOP.mk.in)

dnl Requires a recent version of autoconf
AC_PREREQ(2.13)

dnl Sets the default prefix instalation (/usr/local/oopar)
AC_PREFIX_DEFAULT(/usr/local/oopar)

dnl OOP version stuff
OOP_VERSION=2
OOP_REV=0

AC_SUBST(OOP_VERSION)
AC_SUBST(OOP_REV)

dnl Greetings!
OOP_GREETINGS

dnl System variables
AC_CANONICAL_SYSTEM

dnl Elects c++ as the default testing language
AC_LANG_CPLUSPLUS

dnl Initializes automake (must provide aclocal.m4!)
AM_INIT_AUTOMAKE(oopar, $OOP_VERSION.$OOP_REV)
AM_SANITY_CHECK

dnl Tests the existance of a c++ compiler (m4 macro)
AC_PROG_CXX

dnl Checks for other common programs (gcc, ar, ranlib and install)
AC_PROG_CC
OOP_PROG_AR
AC_PROG_RANLIB
AC_PROG_INSTALL

dnl ----------------------------------------------------------------------------
dnl                          ARCHITECTURE SPECIFICS
dnl ----------------------------------------------------------------------------

dnl Determining standard include location and system architecture
case "$target" in
  i*86-*-linux-*)
    ARCH_INCLUDES=
    ;;
  i*86-*-cygwin*)
    ARCH_INCLUDES=
    ;;
  x86_64*)
    ARCH_INCLUDES=
    ;;
  *-apple-*)
    ARCH_INCLUDES=
    ;;
  powerpc*)
    ARCH_INCLUDES=
    ;;
  *)
    AC_MSG_ERROR(cannot determine system architecture.)
    ;;
esac

AC_SUBST(ARCH_INCLUDES)

dnl ----------------------------------------------------------------------------
dnl                              COMPILATION MODE
dnl ----------------------------------------------------------------------------

dnl Sets the compilation mode (devel, profiling, opt)
AC_ARG_WITH(compilation-mode,
  [  --with-compilation-mode=MODE
                          'devel' for development (debug)
                          'profiling' for use with gprof
                          'opt' for maximum optimization],
  [comp_mode=$withval],
  [comp_mode=${comp_mode='devel'}])

case "${comp_mode}" in
  devel)
    echo "Development mode chosen. Debug symbols will be added."
    COMPILATION_MODE="Development compilation mode."
        MODE_OPTIONS="-DDEBUG -Wall -ggdb3 -pipe -fno-default-inline -fno-inline -m64 -DMT"
    ;;
  profiling)
    echo "Profiling mode chosen. Information for gprof will be added."
    COMPILATION_MODE="Profiling compilation mode."
        MODE_OPTIONS="-DNODEBUG -DNOTDEBUG -Wall -ggdb3 -pg -pipe -m64 -DMT"
    ;;
  opt)
    echo "Optimization mode chosen. Warp 9 Mr. Sulu!"
    COMPILATION_MODE="Optimization compilation mode."
        dnl Assumed by -O2, but here anyway :)
        dnl   -fthread-jumps -fomit-frame-pointer -fstrength-reduce
        dnl   -fcse-follow-jumps -fcse-skip-blocks -frerun-cse-after-loop
        dnl   -frerun-loop-opt -fgcse -fexpensive-optimizations
        dnl   -fmove-all-movables

	dnl Use -march=`uname -m` with caution!

	dnl For the future:
	dnl -fno-math-errno -funsafe-math-optimizations -fno-trapping-math \
	dnl -mfpmath=sse

        MODE_OPTIONS="-DNODEBUG -DNOTDEBUG -DMT -w -s -O2 -march=`uname -m` -fthread-jumps -fomit-frame-pointer -fstrength-reduce -fcse-follow-jumps -fcse-skip-blocks -frerun-cse-after-loop -frerun-loop-opt -fgcse -fexpensive-optimizations -fmove-all-movables -funroll-loops -ffast-math -fregmove -falign-functions -falign-jumps -falign-loops -malign-double -finline-limit=3000 -fshort-enums -fforce-addr -fdefault-inline -foptimize-sibling-calls -pipe -m64"
    ;;
  *)
    AC_MSG_ERROR(bad value ${comp_mode} for --with-compilation-mode)
    ;;
esac

AC_SUBST(COMPILATION_MODE)
AC_SUBST(MODE_OPTIONS)

OOP_CXXFLAGS=$MODE_OPTIONS
OOP_MK="OOP.mk"

AC_SUBST(OOP_CXXFLAGS)
AC_SUBST(OOP_MK)



dnl ----------------------------------------------------------------------------
dnl                               NeoPZ LOCATION
dnl ----------------------------------------------------------------------------

AC_ARG_WITH(pz-dir,
  [  --with-pz-dir=DIR       Root of PZ instalation [/usr/local/pz]],
  [pz_dir=$withval],
  [pz_dir=${pz_dir="/usr/local/pz"}])

PZ_DIR=$pz_dir
PZ_LIBDIR="-L$pz_dir/lib"
PZ_LIB="-lpz"

AC_SUBST(PZ_DIR)
AC_SUBST(PZ_LIBDIR)
AC_SUBST(PZ_LIB)

dnl ----------------------------------------------------------------------------
dnl                              ENABLE LOG4CXX?
dnl ----------------------------------------------------------------------------

AC_ARG_ENABLE(log4cxx,
  [  --enable-log4cxx=no      Enables the use of LOG4CXX [default=no]],
  [log4cxx_enabled=$enableval],
  [log4cxx_enabled="no"])

case "${log4cxx_enabled}" in
  yes)
    echo "Enabling log4cxx code."
    USING_LOG4CXX="-DLOG4CXX -DLOGPZ"
    LOG4CXX_LIB="-llog4cxx"
	
  ;;
  no)
    echo "log4cxx not chosen."
    USING_LOG4CXX=""
    LOG4CXX_LIB=""
	
  ;;
  *)
    AC_MSG_ERROR(bad value ${log4cxx_enabled} for --enable-log4cxx)
  ;;
esac

AC_SUBST(USING_LOG4CXX)
AC_SUBST(LOG4CXX_LIB)


dnl ----------------------------------------------------------------------------
dnl                               LOG4CXX LOCATION
dnl ----------------------------------------------------------------------------

dnl log4cxx location
AC_ARG_WITH(log4cxx-dir,
  [  --with-log4cxx-dir=DIR    Root of log4cxx instalation [/usr/local/]],
  [log4cxx_dir=$withval],
  [log4cxx_dir=${log4cxx_dir="/usr/local/"}])

  LOG4CXX_DIR=$log4cxx_dir
  LOG4CXX_INCLUDE="-I$LOG4CXX_DIR/include"
  LOG4CXX_LIBDIR="-L$LOG4CXX_DIR/lib"
  LOG4CXX_FLAG="-DLOG4CXX"

AC_SUBST(LOG4CXX_DIR)
AC_SUBST(LOG4CXX_INCLUDE)
AC_SUBST(LOG4CXX_LIBDIR)
AC_SUBST(LOG4CXX_SOURCE)

dnl ----------------------------------------------------------------------------
dnl                              ENABLE SOCKET?
dnl ----------------------------------------------------------------------------

AC_ARG_ENABLE(socket,
  [  --enable-socket=no      Enables the use of SOCKET [default=yes]],
  [socket_enabled=$enableval],
  [socket_enabled="no"])

case "${socket_enabled}" in
  yes)
    echo "Enabling Socket code."
    USING_SOCKET="-DOOP_SOCKET -DBLOCKING -DMTSEND"
	
  ;;
  no)
    echo "SOCKET not chosen."
    USING_SOCKET=""
	
  ;;
  *)
    AC_MSG_ERROR(bad value ${socket_enabled} for --enable-socket)
  ;;
esac

AM_CONDITIONAL( SOCKET, test ${socket_enabled} = yes )
AM_CONDITIONAL(OOPSOCKET, test "$socket_enabled" = yes)
AC_SUBST(USING_SOCKET)


dnl ----------------------------------------------------------------------------
dnl                              ENABLE MPI?
dnl ----------------------------------------------------------------------------

AC_ARG_ENABLE(mpi,
  [  --enable-mpi=no      Enables the use of MPI [default=no]],
  [mpi_enabled=$enableval],
  [mpi_enabled="no"])

case "${mpi_enabled}" in
  yes)
    echo "Enabling MPI code."
    USING_MPI="-DOOP_MPI -DBLOCKING -DMTSEND"
	
  ;;
  no)
    echo "MPI not chosen."
    USING_MPI=""
	
  ;;
  *)
    AC_MSG_ERROR(bad value ${mpi_enabled} for --enable-mpi)
  ;;
esac

AM_CONDITIONAL( MPI, test ${mpi_enabled} = yes )
AM_CONDITIONAL(OOPMPI, test "$mpi_enabled" = yes)
AC_SUBST(USING_MPI)


dnl ----------------------------------------------------------------------------
dnl                              ENABLE MPE?
dnl ----------------------------------------------------------------------------

AC_ARG_ENABLE(mpe,
  [  --enable-mpe=no      Enables the use of MPE [default=no]],
  [mpe_enabled=$enableval],
  [mpe_enabled="no"])

case "${mpe_enabled}" in
  yes)
    echo "Enabling MPE logging functionality."
    USING_MPE="-DOOP_MPE"
	
  ;;
  no)
    echo "MPE not chosen."
    USING_MPE=""
	
  ;;
  *)
    AC_MSG_ERROR(bad value ${mpe_enabled} for --enable-mpe)
  ;;
esac

AM_CONDITIONAL( MPE, test ${mpe_enabled} = yes )
AM_CONDITIONAL(OOPMPE, test "$mpe_enabled" = yes)
AC_SUBST(USING_MPE)


dnl ----------------------------------------------------------------------------
dnl                              ENABLE MPILAM?
dnl ----------------------------------------------------------------------------

AC_ARG_ENABLE(mpilam,
  [  --enable-mpilam=no      Enables the use of MPI [default=no]],
  [mpilam_enabled=$enableval],
  [mpilam_enabled="no"])

case "${mpilam_enabled}" in
  yes)
    echo "Enabling MPILAM code."
    USING_MPILAM="-DOOP_MPI"
	
  ;;
  no)
    echo "MPILAN not chosen."
    USING_MPILAM=""
	
  ;;
  *)
    AC_MSG_ERROR(bad value ${mpilam_enabled} for --enable-mpilam)
  ;;
esac

AM_CONDITIONAL(MPILAM, test ${mpilam_enabled} = yes )
AM_CONDITIONAL(OOPMPILAM, test "$mpilam_enabled" = yes)
AC_SUBST(USING_MPILAM)


dnl ----------------------------------------------------------------------------
dnl                               MPI LOCATION
dnl ----------------------------------------------------------------------------

dnl MPI location
AC_ARG_WITH(mpi-dir,
  [  --with-mpi-dir=DIR    Root of MPI instalation [/usr/local/mpi]],
  [mpi_dir=$withval],
  [mpi_dir=${mpi_dir="/usr/local/mpi"}])

case "${mpi_enabled}" in
  yes)
    MPIDIR=$mpi_dir
    MPIINCLUDE="-I$MPIDIR/include"
    MPILIBDIR="-L$MPIDIR/lib"
    MPILIB="-lmpi -lmpich -lmpichcxx"
  ;;
  no)
    MPIDIR=""
    MPIINCLUDE=""
    MPILIBDIR=""
    MPILIB=""
  ;;
  *)
    AC_MSG_ERROR(bad value ${mpi_enabled} for --enable-mpi)
  ;;
esac

AC_SUBST(MPIDIR)
AC_SUBST(MPIINCLUDE)
AC_SUBST(MPILIBDIR)
AC_SUBST(MPILIB)

dnl ----------------------------------------------------------------------------
dnl                               MPE LOCATION
dnl ----------------------------------------------------------------------------

dnl MPE location
AC_ARG_WITH(mpe-dir,
  [  --with-mpe-dir=DIR    Root of MPE instalation [/usr/local/mpe]],
  [mpe_dir=$withval],
  [mpe_dir=${mpi_dir}])

case "${mpe_enabled}" in
  yes)
    MPEDIR=$mpi_dir
    MPEINCLUDE="-I$MPIDIR/include"
    MPELIBDIR="-L$MPIDIR/lib"
    MPELIB="-llmpe -lmpe   -lm"
    MPILIB=""
	
  ;;
  no)
    MPEDIR=""
    MPEINCLUDE=""
    MPELIBDIR=""
    MPELIB=""
  ;;
  *)
    AC_MSG_ERROR(bad value ${mpi_enabled} for --enable-mpi)
  ;;
esac

AC_SUBST(MPEDIR)
AC_SUBST(MPEINCLUDE)
AC_SUBST(MPELIBDIR)
AC_SUBST(MPELIB)
AC_SUBST(MPILIB)

dnl ----------------------------------------------------------------------------
dnl                               MPILAM LOCATION
dnl ----------------------------------------------------------------------------

dnl MPILAM location
AC_ARG_WITH(mpilam-dir,
  [  --with-mpilam-dir=DIR    Root of MPILAM instalation [/usr/local/mpi]],
  [mpilam_dir=$withval],
  [mpilam_dir=${mpi_dir="/usr/local/"}])

case "${mpilam_enabled}" in
  yes)
    MPILAMDIR=$mpilam_dir
    MPILAMINCLUDE="-I$MPILAMDIR/include"
    MPILAMLIBDIR="-L$MPILAMDIR/lib"
    MPILAMLIB="-lmpi"
	MPILAMSOURCE="oopmpicomm.cpp oopmpistorage.cpp"
  ;;
  no)
    MPILAMDIR=""
    MPILAMINCLUDE=""
    MPILAMLIBDIR=""
    MPILAMLIB=""
	MPILAMSOURCE=""
  ;;
  *)
    AC_MSG_ERROR(bad value ${mpilam_enabled} for --enable-mpilam)
  ;;
esac

AC_SUBST(MPILAMDIR)
AC_SUBST(MPILAMINCLUDE)
AC_SUBST(MPILAMLIBDIR)
AC_SUBST(MPILAMLIB)
AC_SUBST(MPILAMSOURCE)



dnl ----------------------------------------------------------------------------
dnl                                  CLEANING
dnl ----------------------------------------------------------------------------

OOP_DISTCLEANFILES="*~ *.h.ps *.cc.ps *.gcov *.bb *.bbg *.da gmon.out core octave-core wrong *.info *.prof"

OOP_CLEANFILES="*~ core octave-core *.o *.info"

AC_SUBST(OOP_DISTCLEANFILES)
AC_SUBST(OOP_CLEANFILES)

dnl ----------------------------------------------------------------------------
dnl                              CONGRATULATIONS!
dnl ----------------------------------------------------------------------------

AC_OUTPUT([ Makefile OOP.mk OOP_user.mk \
	Sources/Makefile \
	socket/Makefile \
	lib/Makefile \
	Projects/Makefile \
	Projects/Flux/Makefile \
	Projects/TestTask/Makefile \
        Projects/SubStruct/Makefile
        
])

OOP_BYEBYE

dnl --| OOP |-----------------------------------------------------------------
