#
# NeoPZ Projects makefile
#
# It will be processed by GNU automake to produce Makefile.in
#
# $Id#
#

DISTCLEANFILES = @OOP_DISTCLEANFILES@
CLEANFILES     = @OOP_CLEANFILES@

-include $(top_srcdir)/@OOP_MK@

SUBDIRS = Flux Trivial PhilFlux

## --| NeoPZ |------------------------------------------------------------------
