#
# NeoPZ Projects makefile
#
# It will be processed by GNU automake to produce Makefile.in
#
# $Id#
#

DISTCLEANFILES = @OOP_DISTCLEANFILES@
CLEANFILES     = @OOP_CLEANFILES@

-include $(top_builddir)/@OOP_MK@

SUBDIRS = PhilFlux TestTask
#PhilFlux Flux Trivial BiCGSt

## --| NeoPZ |------------------------------------------------------------------
