#
# NeoPZ adaptivity makefile
#
# It will be processed by GNU automake to produce Makefile.in
#
# $Id#
#

DISTCLEANFILES = @OOP_DISTCLEANFILES@
CLEANFILES     = @OOP_CLEANFILES@

#-include $(top_builddir)/@OOP_MK@
bin_PROGRAMS = spd srun

spd_SOURCES = spd.c

srun_SOURCES = srun.c

##main_LDADD = $(top_builddir)/lib/liboopar.a @MPILIBDIR@ @MPILAMLIBDIR@ @PZ_LIBDIR@ @PZ_LIB@ @MPILIB@ @MPELIB@ @MPILAMLIB@ -lpthread

## --| OOPar |------------------------------------------------------------------
