# @file oopar/Projects/CMakeList.txt  -- First CMake file for Projects directory 

# This project ...
add_subdirectory(BICGSt)
	
# This project ...
add_subdirectory(BICGSTAB)

# This project ...
add_subdirectory(Flux)

# This project ...
add_subdirectory(PhilFlux)

# This project ...
add_subdirectory(SubStruct)

# This project ...
add_subdirectory(TestCesar)

# This project ...
add_subdirectory(TestTask)

# This project ...
#add_subdirectory(Trivial)

#This project tests the communication using socket
add_subdirectory(TestSocket)